Prevent texi size bumping on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@
 }
 
 html {
+  -webkit-text-size-adjust: none;
   background-color: var(--background);
   color: var(--foreground);
   font: 100%/1.5 "Work Sans", sans-serif;
